--- a/client/index.html
+++ b/client/index.html
@@ -138,8 +138,10 @@
 
 		<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<!-- Custom js files -->
 		<script type="text/javascript" src="./app.js"></script>
 		<script type="text/javascript" src="./user/auth.js"></script>
+		<script type="text/javascript" src="./workout/define.js"></script>
 	</body>
 
 </html>
