--- a/client/index.html
+++ b/client/index.html
@@ -46,8 +46,7 @@
 			            <option>Weight</option>
 			            <option>Reps</option>
 			          </select>
-			          <div id="define-success" class="success1">You added new category!</div>
-			          <div id="define-fail" class="fail">Failed to add new category</div>
+			        
 			          <br>
 			          <button id="def-save" class="btn btn-primary">Save</button>
 			      </div>
@@ -134,6 +133,10 @@
 			     </div>
 			   </div>
 			 </div>
+			</div>
+			<div id="define-success" class="modal alert alert-success fade">You added a new category!
+			</div>
+			<div id="define-fail" class="modal alert alert-danger fade">Failed to add new category
 			</div>
 
 		<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
