--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,8 @@
 			    <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
 			    <li><a href="#feed" class="disabled" data-toggle="tab">View Feed</a></li>
 			    <!--Welcome portion-->
-			    <li a href="#welcome-login" class="disabled" data-toggle="tab"><span id="welcome"></span></li>
+			    <li href="#welcome-login" class="disabled" data-toggle="tab"><span id="welcome"></span></li>
+			    <a href="#update-log" data-toggle="tab" class="disabled" hidden></a>
 			  </ul>
 
 			  <div class="container">
@@ -93,6 +94,20 @@
 			        <button id="msg-send" class="btn btn-primary">Send</button>
 			      </div>
 			    </div>
+
+			    <div class="tab-pane fade" id="update-log">
+		                    <h2>Log Update</h2>
+		                    <label>Result</label>
+		                    <input type="hidden" class="form-control" id="update-id" />
+		                    <input type="text" class="form-control" id="update-result" />
+		                    <label>Workout Select:</label>
+		                    <select class="form-control" id="update-definition">
+		 			 </select>
+		                    <label>notes</label>
+		                    <textarea class="form-control" id="update-description" rows="3"></textarea>
+		                    <br />
+		                    <button id="log-update" class="btn btn-primary">Save</button>
+		                </div>
 
 			 <div class="modal fade" id="login-modal" role="dialog">
 			   <div class="modal-dialog">
