--- a/client/index.html
+++ b/client/index.html
@@ -8,22 +8,26 @@
 		<title>Workout Log</title>
 
 		<link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./main.css">
 	</head>
 	<body>
+		<nav class="nav nav-inverse">
 		  <ul class="nav nav-tabs">
-			    <li><a href="#home" id="loginout" class="disabled" data-toggle="tab">Login</a>
+			    <li><a href="#home" id="loginout" class="disabled lists" data-toggle="tab">Login</a>
 			      <!--logout too -->
 			    </li>
-			    <li><a href="#define" class="disabled" data-toggle="tab">Define</a></li>
-			    <li><a href="#log" class="disabled" data-toggle="tab">Log</a></li>
-			    <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
-			    <li><a href="#feed" class="disabled" data-toggle="tab">View Feed</a></li>
+			    <li><a href="#define" class="disabled lists" data-toggle="tab">Define</a></li>
+			    <li><a href="#log" class="disabled lists" data-toggle="tab">Log</a></li>
+			    <li><a href="#update-log" data-toggle="tab" class="disabled lists" hidden>Update</a></li>
+			    <li><a href="#history" class="disabled lists" data-toggle="tab">View History</a></li>
+			    <li><a href="#feed" class="disabled lists" data-toggle="tab">View Feed</a></li>
 			    <!--Welcome portion-->
-			    <li href="#welcome-login" class="disabled" data-toggle="tab"><span id="welcome"></span></li>
-			    <a href="#update-log" data-toggle="tab" class="disabled" hidden></a>
+			    <li href="#welcome-login" class="disabled lists" data-toggle="tab"><span id="welcome"></span></li>
+			    <a href="#update-log" data-toggle="tab" class="disabled lists" hidden></a>
 			  </ul>
+		</nav>
 
-			  <div class="container">
+			  <div class="container" id="homePage">
 			    <div class="tab-content">
 			      <div class="tab-pane active" id="home">
 			        <h2>Workout Log</h2>
@@ -37,7 +41,7 @@
 			        </div>
 			      </div>
 			      <!-- DEFINE -->
-			      <div class="tab-pane" id="define">
+			      <div class="tab-pane fade" id="define">
 			        <h2>Define</h2>
 			          <label for="def-description">Description</label>
 			          <textarea class="form-control" id="def-description" rows="3" ></textarea>
@@ -58,7 +62,7 @@
 			      Here is a lab for the class
 			      get them to build the rest of the HTML
 			      -->
-			      <div class="tab-pane" id="log">
+			      <div class="tab-pane fade" id="log">
 			        <h2>Log</h2>
 			          <label>Result</label>
 			          <input type="text" class="form-control" id="log-result" />
@@ -79,13 +83,26 @@
 			          <button id="log-save" class="btn btn-primary">Save</button>
 			      </div>
 
-			      <div class="tab-pane" id="history">
+			      <div class="tab-pane fade" id="update-log">
+					<h2>Log Update</h2>			      	 
+					<label>Result</label>
+					<input type="hidden" class="form-control" id="update-id">
+					<input type="text" class="form-control" id="update-result">
+					<label>Workout Select:</label>
+					<select class="form-control" id="update-definition"></select>
+					<label>Notes</label>
+					<textarea class="form-control" id="update-description" rows="3"></textarea>
+					<br>
+					<button id="log-update" class="btn btn-primary">Save</button>
+			      </div>
+
+			      <div class="tab-pane fade" id="history">
 			        <h2>History</h2>
 			        <ul class="list-group" id="history-list">
 			        </ul>
 			      </div>
 
-			      <div class="tab-pane" id="feed">
+			      <div class="tab-pane fade" id="feed">
 			        <h2>Workout Feed</h2>
 			        <ul class="list-group" id="feed-list"></ul>
 			        <label>Send A Message</label>
@@ -95,7 +112,7 @@
 			      </div>
 			    </div>
 
-			    <div class="tab-pane fade" id="update-log">
+			    <div class="tab-pane fade" id="update-log" >
 		                    <h2>Log Update</h2>
 		                    <label>Result</label>
 		                    <input type="hidden" class="form-control" id="update-id" />
